# cpp-py-meson

./: .clang-format  .gitignore  README.md  meson.build  meson.options  pyproject.toml  pyrightconfig.json
cpp/: meson.build
cpp/perf/: perf_example.cpp
cpp/src/: example.cpp
cpp/tests/: test_example.cpp
python/: meson.build
python/_core/: wrap.cpp
python/exampleproject/: __init__.py
python/tests/: test_example.py
subprojects/: .gitignore
